syntax = "proto3";

service Asset {
    //    rpc GetFileUploadURL (GetFileUploadURLRequest) returns (GetFileUploadURLResponse) {
    //    };
    //    rpc GetFileUploadStat (GetFileUploadStatRequest) returns (GetFileUploadStatResponse) {
    //    };
    rpc RegisterFile (RegisterFileRequest) returns (RegisterFileResponse) {
    };
    rpc QueryUploadedData (QueryRequest) returns (QueryUploadedDataResponse) {
    };
    //    rpc GetDownLoadURL (GetDownLoadURLRequest) returns (GetDownLoadURLResponse) {
    //    };
    rpc RegisterAsset (RegisterRequest) returns (RegisterResponse) {
    };
    rpc QueryAsset (QueryRequest) returns (QueryResponse) {
    };
//    rpc QueryAllAsset (QueryRequest) returns (QueryResponse) {
//    };
    //    rpc Modify (ModifyRequest) returns (ModifyResponse) {
    //    };
    //
    //    rpc QueryByID (QueryByIDRequest) returns (QueryResponse) {
    //    };
    //    rpc GetUserPurchaseAssetList (GetUserPurchaseAssetListRequest) returns (QueryResponse) {
    //    };

    rpc PreSaleNotice (PushTxRequest) returns (PreSaleNoticeResponse) {
    };
    rpc QueryMyNotice (QueryMyNoticeRequest) returns (QueryMyNoticeResponse) {
    };
    rpc QueryMyPreSale (QueryMyNoticeRequest) returns (QueryMyNoticeResponse) {
    };
}

message PushTxRequest {
    uint32 version = 1;
    uint32 cursor_num = 2;
    uint32 cursor_label = 3;
    uint64 lifetime = 4;
    string sender = 5;
    string contract = 6;
    string method = 7;
    string param = 8;
    uint32 sig_alg = 9;
    string signature = 10;
}


message GetFileUploadURLRequest {
    //    string username = 1;
    //    int64 fileSize = 2;
    //    string fileName = 3;
    //    int32 filePolicy = 4;
    //    int32 fileNumber = 5;
    //    string fileash = 6;
    //    string signature = 7;
    string postBody = 1;
}
message GetFileUploadURLResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}

message RegisterFileRequest {
    string postBody = 1;
}

message RegisterFileResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}


message QueryUploadedDataResponse {
    int32 code = 1;
    QueryUploadedData data = 2;
    string msg = 3;
}
message QueryUploadedData {
    uint32 pageNum = 1;
    uint32 rowCount = 2;
    repeated QueryUploadedRow row = 3;
}
message QueryUploadedRow {
    string username = 1;
    string file_hash = 2;
    string file_name = 3;
    uint64 file_size = 4;
    string file_policy = 5;
    uint64 file_number = 6;
    uint32 sim_or_ass = 7;
    uint32 op_type = 8;
    string store_addr = 9;
    uint64 create_time = 10;
}


message RegisterRequest {
    /*string username = 1;
    string asset_id = 2;
    string session_id = 3;
    string asset_name = 4;
    int32 feature_tag = 5;
    string asset_sample_path = 6;
    string asset_sample_hash = 7;
    string asset_storage_path = 8;
    string asset_storage_hash = 9;
    string expire_time = 10;
    int64 price = 11;
    string description = 12;
    string upload_date = 13;
    string signature = 14;*/
    string postBody = 1;
}
message RegisterResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}


message QueryAllAssetRequest {
    string username = 1;
    string session_id = 2;
    QueryPara query_para = 3;
}
message QueryPara {
    string username = 1;
    string session_id = 2;
}
message QueryAllAssetResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}

message ModifyRequest {
    //    string username = 1;
    //    string signature = 2;
    string postBody = 1;
}
message ModifyResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}

message GetFileUploadStatRequest {
    string username = 1;
    string fileName = 2;
}
message GetFileUploadStatResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}

message GetDownLoadURLRequest {
    string username = 1;
    string fileName = 2;
}
message GetDownLoadURLResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}


message QueryByIDRequest {
    int32 pageSize = 1;
    int32 pageNum = 2;
    string assetID = 3;
}


message GetUserPurchaseAssetListRequest {
    int32 pageSize = 1;
    int32 pageNum = 2;
    string username = 3;
    string asset_id = 4;
}
message GetUserPurchaseAssetListResponse {
    int32 code = 1;
    QueryPurchaseData data = 2;
    string msg = 3;
}
message QueryPurchaseData {
    uint64 pageNum = 1;
    uint64 rowCount = 2;
    repeated QueryPurchaseRow row = 3;
}
message QueryPurchaseRow {
    string username = 1;
    string session_id = 2;
    string asset_id = 3;
    string data_req_id = 4;
    string consumer = 5;
    //    string asset_name = 6;
}


message PreSaleNoticeRequest {
    string postBody = 1;
}
message PreSaleNoticeResponse {
    uint32 code = 1;
    string msg = 2;
    string data = 3;
}


message QueryRequest {
    uint32 page_size = 1;
    uint32 page_num = 2;
    string username = 3;
    string random = 4;
    string signature = 5;
}

message QueryResponse {
    int32 code = 1;
    QueryData data = 2;
    string msg = 3;
}

message QueryData {
    uint32 page_num = 1;
    uint32 row_count = 2;
    repeated AssetData row = 3;
}
message AssetData {
    string asset_id = 1;
    string username = 2;
    string asset_name = 3;
    string asset_type = 4;
    string feature_tag = 5;
    string sample_hash = 6;
    string storage_hash = 7;
    uint32 expire_time = 8;
    uint32 op_type = 9;
    uint64 price = 10;
    string description = 11;
    uint64 create_time = 12;
}


message QueryMyNoticeRequest {
    int32 pageSize = 1;
    int32 pageNum = 2;
    string username = 3;
    string random = 4;
    string signature = 5;
}
message QueryMyNoticeResponse {
    int32 code = 1;
    QueryNoticeData data = 2;
    string msg = 3;
}
message QueryNoticeData {
    uint32 pageNum = 1;
    uint32 rowCount = 2;
    repeated QueryNoticeRow row = 3;
}
message QueryNoticeRow {
    string username = 1;
    string notice_id = 2;
    string asset_id = 3;
    string asset_name = 4;
    string data_req_id = 5;
    string data_req_name = 6;
    string consumer = 7;
    string read_flag = 8;
    uint64 time = 9;
}